fix form element spacing

--- a/scss/modules/_spacing.scss
+++ b/scss/modules/_spacing.scss
@@ -9,16 +9,11 @@ p {
   margin-top: 0;
 }
 
-button,
-.button {
-  margin-bottom: 1rem;
-}
-
 input,
 textarea,
 select,
 fieldset {
-
+  margin-bottom: 1rem;
 }
 
 pre,
